- Changes for new CRAN submit

--- a/README.Rmd
+++ b/README.Rmd
@@ -27,6 +27,7 @@ with local projections by [Jordà (2005)](https://www.aeaweb.org/articles?id=10.
 ## Main features
 
 - Estimates linear and nonlinear impulse responses with local projections.
+- Estimates linear impulse responses with identified shock and/or with 2SLS.
 - Functions to plot linear and nonlinear impulse responses.
 - Functions are partly implemented in *Rcpp* and *RcppArmadillo* to improve efficiency.
 - High performance with parallel computation.
@@ -63,13 +64,12 @@ I am thankful to Òscar [Jordà](https://sites.google.com/site/oscarjorda/) for 
 [paper](https://www.journals.uchicago.edu/doi/10.1086/696277). 
 
 I greatly benefit from the profound *R*, *Rcpp* and *GitHub* knowledge of Philipp [Wittenberg](https://github.com/wittenberg) and Detlef (overflow) [Steuer](https://github.com/dsteuer).
-Last but not least, I am grateful to Philipp Dybowski for his rigorous comments and without whom I would have 
-never started this project.
+Last but not least, I am grateful to Philipp Dybowski for his comments and without whom I would have never started this project.
 
 All remaining errors are obviously mine. 
 
 ## Development
-I am currently working on a function to conduct panel-lp estimation.
+I am currently working on a function for panel-lp estimation.
 
 
 ### Author
