- Update documentation - Update NEWS - Update README

--- a/README.Rmd
+++ b/README.Rmd
@@ -69,7 +69,7 @@ Last but not least, I am grateful to Philipp Dybowski for his comments and witho
 All remaining errors are obviously mine. 
 
 ## Development
-I am currently working on a function for panel-lp estimation.
+The development version contains two new functions to estimate linear and nonlinear local projections for panel data.
 
 
 ### Author
